--- a/src/index.css
+++ b/src/index.css
@@ -115,3 +115,19 @@ span {
   width: 20rem;
 }
 
+@media screen and (max-width: 280px) {
+  nav {
+    margin-left: 1rem;
+  }
+  input {
+    width: 15rem;
+   
+  }
+  textarea {
+    width: 15rem;
+   
+  }
+
+  
+}
+
